<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="24dp">

    <ImageView
        android:id="@+id/iv_onboarding_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_mango"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_onboarding_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/onboarding_title_1"
        android:textColor="@color/primary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_onboarding_image" />

    <TextView
        android:id="@+id/tv_onboarding_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/onboarding_desc_1"
        android:textColor="@color/text_secondary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_onboarding_action"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/accent"
        android:text="@string/btn_next"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/layout_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_onboarding_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View android:id="@+id/dot1" android:layout_width="10dp" android:layout_height="10dp" android:layout_margin="4dp" android:background="@color/primary"/>
        <View android:id="@+id/dot2" android:layout_width="10dp" android:layout_height="10dp" android:layout_margin="4dp" android:background="@color/button_disabled"/>
        <View android:id="@+id/dot3" android:layout_width="10dp" android:layout_height="10dp" android:layout_margin="4dp" android:background="@color/button_disabled"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
